dataset1235/2025-2/2947369575/users/2551804183/executions/1003782500_1078076002.log
== SUBMISSION (2025-08-27 02:59:07)
-- CODE: 
numero = float(input())

print(numeroo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(numeroo)
          ^^^^^^^
NameError: name 'numeroo' is not defined. Did you mean: 'numero'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(numeroo)
          ^^^^^^^
NameError: name 'numeroo' is not defined. Did you mean: 'numero'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 02:59:16)
-- CODE: 
numero = float(input())

print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 02:59:08)
-- CODE: 
numero = float(input())

print(numeroo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(numeroo)
          ^^^^^^^
NameError: name 'numeroo' is not defined. Did you mean: 'numero'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(numeroo)
          ^^^^^^^
NameError: name 'numeroo' is not defined. Did you mean: 'numero'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
